[gd_scene load_steps=39 format=2]

[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_013.png" type="Texture" id=1]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_019.png" type="Texture" id=2]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_011.png" type="Texture" id=3]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_026.png" type="Texture" id=4]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_008.png" type="Texture" id=5]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_015.png" type="Texture" id=6]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_016.png" type="Texture" id=7]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_006.png" type="Texture" id=8]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_012.png" type="Texture" id=9]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_020.png" type="Texture" id=10]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_017.png" type="Texture" id=11]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_018.png" type="Texture" id=12]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_021.png" type="Texture" id=13]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_022.png" type="Texture" id=14]
[ext_resource path="res://assets/enemy/die/1674080419990.png" type="Texture" id=15]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_023.png" type="Texture" id=16]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_025.png" type="Texture" id=17]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_014.png" type="Texture" id=18]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_024.png" type="Texture" id=19]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_007.png" type="Texture" id=20]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_009.png" type="Texture" id=21]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_010.png" type="Texture" id=22]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_027.png" type="Texture" id=23]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_028.png" type="Texture" id=24]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_005.png" type="Texture" id=25]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_003.png" type="Texture" id=26]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_004.png" type="Texture" id=27]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_002.png" type="Texture" id=28]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_001.png" type="Texture" id=29]
[ext_resource path="res://assets/enemy/enemy_walk/0_Warrior_Walk_000.png" type="Texture" id=30]
[ext_resource path="res://assets/enemy/die/0_Warrior_Diied_000.png" type="Texture" id=31]
[ext_resource path="res://enemy1.gd" type="Script" id=32]
[ext_resource path="res://assets/audio/drop_003.ogg" type="AudioStream" id=33]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 31 ) ],
"loop": false,
"name": "die",
"speed": 6.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 22 ), ExtResource( 25 ), ExtResource( 8 ), ExtResource( 20 ), ExtResource( 5 ), ExtResource( 21 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 18 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 2 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 4 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "walk",
"speed": 20.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 21.5
height = 32.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22, 3 )

[sub_resource type="Animation" id=4]
resource_name = "enemy_die"
length = 0.1
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 33 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 21.0
height = 32.0

[node name="enemy1" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 32 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2, 0 )
frames = SubResource( 1 )
animation = "walk"
frame = 15
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.5, 1.5 )
shape = SubResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="enemy_die" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_die"]
position = Vector2( 2, -41 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="enemy_die"]
wait_time = 0.504
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 33 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/enemy_die = SubResource( 4 )

[node name="hurt" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt"]
position = Vector2( 4, 1 )
shape = SubResource( 6 )

[connection signal="body_entered" from="enemy_die" to="." method="_on_enemy_die_body_entered"]
[connection signal="timeout" from="enemy_die/Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="hurt" to="." method="_on_hurt_area_entered"]
